# sousvide

./: AUTHORS  Makefile  README.md  main.c  wifi.h
firmware/: .gitignore  1wire.c  Makefile  com.c  com.h  controller.c  controller.h  main.c  main.h  timebase.c  uart.h  version.h  wifi.c
firmware/libfixmath/: Makefile  fix16.h
hardware/: sousvide-B.Cu.gbr  sousvide-B.SilkS.gbr  sousvide-F.Cu.gbr  sousvide-F.SilkS.gbr  sousvide-NPTH.drl  sousvide-cache.lib  sousvide.bak  sousvide.drl  sousvide.kicad_pcb  sousvide.kicad_pcb-bak  sousvide.net  sousvide.pro  sousvide.sch
hardware.pretty/: Fuse_multifuse.kicad_mod
hardware/footprints.pretty/: BLOCK_VB2,0_1_XX.kicad_mod  Fuseholder_multi.kicad_mod
hardware/gerber/: sousvide-B.Cu.gbr  sousvide-B.SilkS.gbr  sousvide-F.Cu.gbr  sousvide-F.SilkS.gbr  sousvide-NPTH.drl  sousvide.drl
sousvide/: .gitignore  CMakeLists.txt  README  icons.qrc  sousvide.kdev4
sousvide/src/: cooktimer.cpp  cooktimer.h  main.cpp  modifyconstants.cpp  modifyconstants.h  pidconst.ui  scanner.cpp  scanner.h  sousvide.cpp  sousvide.h  sousvide.ui  sousvidecontrol.cpp  sousvidecontrol.h  statusplot.cpp  statusplot.h
